# UltraGungeon

./: CMakeLists.txt  README.txt
MyNotes/: VisitorPatternForPairs.txt  howToUseQGraphicsView.txt
app/: CMakeLists.txt  main.cpp
diagrams/: .$classes.drawio.bkp  classes.drawio
include/BasicObjects/: AbstractEntity.h  AbstractHitbox.h  GameObject.h
include/Entities/: AbstractEnemy.h  AndreBallProjectile.h  BlueRailcannonHitscan.h  BlueRailgunHitscan.h  Coin.h  Door.h  EnemyAndre.h  EnemyFilth.h  Explosion.h  Hitbox.h  Hitscan.h  MovableEntity.h  NonPlayerEntity.h  ParryProjectile.h  PistolHitscan.h  PlayerEntity.h  Projectile.h  ShotgunPelletProjectile.h  Teams.h  Trigger.h  Wall.h
include/Helpers/: Helpers.h
include/Interface/: MainWindow.h  Renderer.h
include/MapGenerator/: MapGenerator.h  RoomGenerator.h
include/Model/: EntityWrapper.h  Level.h  Model.h
src/BasicObjects/: AbstractEntity.cpp  AbstractHitbox.cpp  CMakeLists.txt  GameObject.cpp
src/Entities/: AbstractEnemy.cpp  AndreBallProjectile.cpp  BlueRailcannonHitscan.cpp  BlueRailgunHitscan.cpp  CMakeLists.txt  Coin.cpp  Door.cpp  EnemyAndre.cpp  EnemyFilth.cpp  Explosion.cpp  Hitbox.cpp  Hitscan.cpp  MovableEntity.cpp  NonPlayerEntity.cpp  ParryProjectile.cpp  PistolHitscan.cpp  PlayerEntity.cpp  Projectile.cpp  ShotgunPelletProjectile.cpp  Trigger.cpp  Wall.cpp
src/Helpers/: CMakeLists.txt  Helpers.cpp
src/Interface/: CMakeLists.txt  MainWindow.cpp  Renderer.cpp
src/MapGenerator/: CMakeLists.txt  MapGenerator.cpp  RoomGenerator.cpp
src/Model/: CMakeLists.txt  EntityWrapper.cpp  Level.cpp  Model.cpp
